# vga4cpc

./: .gitignore  README.md  vga4cpc.uf2
compiled_uf2/: vga4cpc.uf2
kicad/: Pico.kicad_sch  comparators.kicad_sch  connectors.kicad_sch  vga4cpc.kicad_pcb  vga4cpc.kicad_pro  vga4cpc.kicad_sch
src/: CMakeLists.txt  constants.h  cpc_dma.c  cpc_dma.h  cpc_pio.c  cpc_pio.h  main.c  mode_switch.c  mode_switch.h  test_screen.c  test_screen.h  vga_dma.c  vga_dma.h  vga_pio.c  vga_pio.h
src/pioasm/: hsync_50.pio  hsync_60.pio  rgb_50.pio  rgb_60.pio  rgbin.pio  vsync_50.pio  vsync_60.pio  vsyncgen.pio
